# VisualLinkerScript

./: .gitignore  CMakeLists.txt  Helpers.cpp  Helpers.h  LICENSE  README.md  Resources.qrc  SearchDialog.cpp  SearchDialog.h  SearchDialog.ui  Timeline - Gantt Chart.puml  VisualLinkerScript.pro  VisualLinkerScript.sln  VisualLinkerScript.sln.DotSettings  VisualLinkerScript.vcxproj  VisualLinkerScript.vcxproj.filters  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_MainWindow.h
DrcEngine/: CDrcManager.cpp  (+7 more)
src/: CMakeLists.txt  Helpers.cpp  Helpers.h  MainWindow.cpp  Resources.qrc  UpdateQtProjectFile.bat  VisualLinkerScript.pro  VisualLinkerScript.pro.template  VisualLinkerScript.vcxproj  VisualLinkerScript.vcxproj.filters  main.cpp
src/Components/InputDialogs/: QJumpToLineDialog.cpp  QJumpToLineDialog.h  QLabelAssistedInput.cpp  QLabelAssistedInput.h
src/Components/MemoryVisualizer/: CModelTranslator.cpp  CModelTranslator.h  EInsertObjectType.h  QMemoryLayoutRender.cpp  QMemoryLayoutRender.h  QMemoryVisualizer.cpp  QMemoryVisualizer.h  QPercentageLineEdit.h
src/Components/QChromeTab/: QChromeTabButton.cpp  QChromeTabWidget.cpp
src/Components/QFlatCheckBox/: QFlatCheckBox.cpp  QFlatCheckBox.h
src/Components/QLinkerScriptSession/: QLinkerScriptSession.cpp  QLinkerScriptSession.h
src/Components/QManualSizeGrip/: QManualSizeGrip.cpp
src/Components/QScintilla/: ComponentHelpers.cpp  ComponentHelpers.h  VlsScintilla.h
src/Components/QSearchPopup/: QSearchPopup.cpp  QSearchPopup.h  SearchPerimeterTypeEnum.h  SearchReplaceRequestTypeEnum.h
src/DrcEngine/: CCorrectiveAction.h  CDrcManager.cpp  CDrcManager.h  CDrcViolation.h  EDrcViolationCode.cpp  EDrcViolationCode.h  IDrcRuleBase.h
src/DrcEngine/Rules/: CDirectivesDeclaredOnlyOnceRule.cpp  CDirectivesDeclaredOnlyOnceRule.h  CEntryIsDefinedRule.cpp  CEntryIsDefinedRule.h  CIncludeRecursionGuard.cpp  CIncludeRecursionGuard.h  CIncludedFilesArePresentRule.cpp  CIncludedFilesArePresentRule.h  CLocationCounterCannotGoBackwardsRule.cpp  CLocationCounterCannotGoBackwardsRule.h  CMemoryRegionDefinedOnlyOnceRule.cpp  CMemoryRegionDefinedOnlyOnceRule.h  CNoDuplicateMemoryRegionNameRule.cpp  CNoDuplicateMemoryRegionNameRule.h  CSectionsDefinedOnlyOnceRule.cpp  CSectionsDefinedOnlyOnceRule.h  CSymbolsDefinedInAdvanceRule.cpp  CSymbolsDefinedInAdvanceRule.h
src/LinkerScriptManager/: QLinkerScriptManager.cpp  QLinkerScriptManager.h
src/MD5/: MD5.cpp  MD5.h  MD5_loc.h
src/Models/: CAssignmentProcedureStatement.cpp  CAssignmentProcedureStatement.h  CAssignmentStatement.cpp  CAssignmentStatement.h  CComment.h  CExpression.cpp  CExpression.h  CExpressionNumber.h  CExpressionOperator.h  CFunctionCall.cpp  CFunctionCall.h  CIncludeCommand.h  CIndentationInfo.h  CInputSectionFunction.cpp  CInputSectionFunction.h  CInputSectionStatement.cpp  CInputSectionStatement.h  CInputSectionTargetSection.h  CInputSectionWildcardWord.h  CLinkerScriptFile.cpp  CLinkerScriptFile.h  CMemoryRegion.cpp  CMemoryRegion.h  CMemoryStatement.cpp  CMemoryStatement.h  CMemoryStatementAttribute.h  CParameterSeparator.h  CParsedContentBase.cpp  CParsedContentBase.h  CPhdrsRegion.cpp  CPhdrsRegion.h  CPhdrsStatement.cpp  CPhdrsStatement.h  CProcedureCall.cpp  CProcedureCall.h  CSectionOutputAtLmaRegion.h  CSectionOutputCommand.cpp  CSectionOutputCommand.h  CSectionOutputConstraint.h  CSectionOutputDataExpression.h  (+20 more)
src/Models/Raw/: CRawEntry.h  CRawFile.h  RawEntryType.h
src/ParsingEngine/: CLexerException.h  CLexerViolation.h  CLinkerScriptLexer.cpp  CLinkerScriptParser.cpp  CLinkerScriptParser.h  CMasterParserException.h  CParserViolation.h  ELexerViolationCode.cpp  ELexerViolationCode.h  EParserViolationCode.cpp  EParserViolationCode.h
src/QtProjectFileBuilder/: ProFileBuilder.deps.json
src/Tests/: TestMacros.h  TestRegistry.h
src/debug/: VisualLinkerScript.exe.recipe  VisualLinkerScript.vcxproj.FileListAbsolute.txt  moc_QFlatCheckBox.cpp  moc_QJumpToLineDialog.cpp  moc_QLinkerScriptManager.cpp  moc_QLinkerScriptSession.cpp  moc_QManualSizeGrip.cpp  moc_QMemoryLayoutRender.cpp  moc_QMemoryVisualizer.cpp  moc_QPercentageLineEdit.cpp  moc_QSearchPopup.cpp  moc_ScintillaQt.cpp  moc_qsciabstractapis.cpp  moc_qscilexercpp.cpp  moc_qsciscintilla.cpp  qrc_Resources.cpp
src/release/: VisualLinkerScript.exe.recipe  VisualLinkerScript.vcxproj.FileListAbsolute.txt  moc_MainWindow.cpp  moc_QChromeTabButton.cpp  moc_QChromeTabWidget.cpp  moc_QIssuesTreeView.cpp  moc_QLabelAssistedInput.cpp  moc_SciClasses.cpp  moc_qsciapis.cpp  moc_qscilexer.cpp  moc_qscilexerlinkerscript.cpp  moc_qscimacro.cpp  moc_qsciscintillabase.cpp
tests/: CMakeLists.txt  TestMacros.h  TestRegistry.h  VisualLinkerScript.Tests.pro  VisualLinkerScript.Tests.vcxproj  VisualLinkerScript.Tests.vcxproj.filters  VisualLinkerScript.Tests.vcxproj.filters.bak  main.cpp
tests/debug/: CEntryIsDefinedRuleTests.moc
(+711 files in other folders)
